[package]
name = "gfycat-transfer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gfycat_transfer"

[dependencies]
bytes = "1.1.0"
config = "0.12"
csv = "1.1.6"
dotenv = "0.15.0"
fake = "2.4.3"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
rpassword = "5.0.1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
serde_json = "1.0.79"
tokio = { version = "1", features = ["full"] }
